@startuml af
BackgroundColor <<interface>> Tomato

' O código cliente funciona com fábricas e produtos apenas por meio de resumo
' tipos: AbstractFactory e AbstractProduct. Isso permite que você passe por
' qualquer fábrica ou subclasse do produto para o código do cliente sem
' quebrá-lo.

  class ClientCode {
    -factory: AbstractFactory
    +Client(factory: AbstractFactory)
    +someOperation()
    +factory.createProductA() : ProductAbstractA
    +factory.createProductB() : ProductAbstractB

  '   console.log(ProductAbstractB.usefulFunctionB());
  '   console.log(ProductAbstractB.anotherUsefulFunctionB(ProductAbstractA));
  }

' A interface Abstract Factory declara um conjunto de métodos que retornam
' diferentes produtos abstratos. Esses produtos são chamados de família e são
' relacionado por um tema ou conceito de alto nível. Produtos de uma família
' geralmente são capazes de colaborar entre si. Uma família de produtos pode
' ter vários variantes, mas os produtos de uma variante são incompatíveis com
' os produtos de outro.

  interface AbstractFactory <<interface>> {
    +createProductA(): AbstractProductA
    +createProductB(): AbstractProductB
  }
  
' As fábricas concretas produzem uma família de produtos que pertencem a um
' único variante. A fábrica garante que os produtos resultantes são 
' compatíveis. Note que as assinaturas dos métodos da Fábrica concreta retornam
' um produto abstrato, enquanto dentro do método um produto concreto é
' instanciado.

  class ConcreteFactory1{
    -productA: AbstractProductA
    -productB: AbstractProductB
    +createProductA(): AbstractProductA
    +createProductB(): AbstractProductB
  }

' Cada Fábrica de Concreto possui uma variante de produto correspondente.

  class ConcreteFactory2{
    -productA: AbstractProductA
    -productB: AbstractProductB
    +createProductA(): AbstractProductA
    +createProductB(): AbstractProductB
  }

' Cada produto distinto de uma família de produtos deve ter uma interface  básica. Todos
' variantes do produto devem implementar esta interface .

  interface AbstractProductA <<interface>> {
    +usefulFunctionA(): string
  }

' Esses produtos de concreto são criados por fábricas de concreto correspondentes.

  class ConcreteProductA1{
    +usefulFunctionA(): string
  }

  class ConcreteProductA2{
    +usefulFunctionA(): string
  }

  interface AbstractProductB <<interface>> {
    +usefulFunctionB(): string
    +anotherUsefulFunctionB(collaborator: AbstractProductA): string
  }

' Esta é a interface básica <<interface>>  de outro produto. Todos os produtos podem interagir
' entre si, mas a interação adequada só é possível entre produtos de
' a mesma variante concreta.

  class ConcreteProductB1{

    ' O produto B é capaz de fazer suas próprias coisas ...
    +usefulFunctionB(): string
    ' ... mas também pode colaborar com o ProdutoA.
    '
    ' A Abstract Factory certifica-se de que todos os produtos que cria são da
    ' mesma variante e, portanto, compatível.
    +anotherUsefulFunctionB(collaborator: AbstractProductA): string
  }

' Esses produtos concretos são criados por fábricas concretas
' correspondentes.

  class ConcreteProductB2{
    +usefulFunctionB(): string
    ' A variante, Produto B2, só funciona corretamente com a variante,
    ' Produto A2. No entanto, ele aceita qualquer instância de AbstractProductA
    ' como um argumento.
    +anotherUsefulFunctionB(collaborator: AbstractProductA): string
  }

  package ProductAbstractA <<Node>> {
  }

  package ProductAbstractB <<Database>> {
  }

  ClientCode ..|> AbstractFactory #green;line.dashed;text:green : realization

  AbstractFactory <|.. ConcreteFactory1  #green;line.dashed;text:green : realization
  AbstractFactory <|.. ConcreteFactory2  #green;line.dashed;text:green : realization

  ConcreteFactory1 "1, 1" o-- "0, *" ConcreteProductA1  : aggregation
  ConcreteFactory1 "1, 1" o-- "0, *" ConcreteProductB1  : aggregation
  ConcreteFactory2 "1, 1" o-- "0, *" ConcreteProductA2  : aggregation
  ConcreteFactory2 "1, 1" o-- "0, *" ConcreteProductB2  : aggregation

  AbstractProductA <|.. ConcreteProductA1 #green;line.dashed;text:green : realization
  AbstractProductB <|.. ConcreteProductB1 #green;line.dashed;text:green : realization
  AbstractProductA <|.. ConcreteProductA2 #green;line.dashed;text:green : realization
  AbstractProductB <|.. ConcreteProductB2 #green;line.dashed;text:green : realization

  AbstractFactory <|-- AbstractProductA #line:red;line.bold;text:red : extends
  AbstractFactory <|-- AbstractProductB #line:red;line.bold;text:red : extends

  ConcreteProductA1 -- ProductAbstractA #blue;line.dotted;text:blue : creation
  ConcreteProductA2 -- ProductAbstractA #blue;line.dotted;text:blue : creation
  ConcreteProductB1 -- ProductAbstractB #blue;line.dotted;text:blue : creation
  ConcreteProductB2 -- ProductAbstractB #blue;line.dotted;text:blue : creation

@enduml